GNOME Bugzilla – Bug 693677
graph grids sometimes not rendered
Last modified: 2013-11-06 02:42:28 UTC
every so often, when I open gnome-system-monitors, the graphs just appear floating on a white background. Resizing the window brings the grid back, so it is not a theme issue.
What kind of graphics card and which drivers are you using (proprietary/binary)? I have not seen this yet, but there's also a downstream report of the same issue from ubuntu [1], so I am setting this to confirmed. [1] https://bugs.launchpad.net/gnome-system-monitor/+bug/1093582
This is with intel graphics.
I'm seeing this, too, with ATI graphics.
*** Bug 699200 has been marked as a duplicate of this bug. ***
How often do you see this? What value are you using as the Update interval in the preferences /Resources for the graphs?
Almost every time I can see this. I'm using Intel card with SNA enabled. I think the update interval is default 0.0.
*** Bug 699733 has been marked as a duplicate of this bug. ***
*** Bug 701778 has been marked as a duplicate of this bug. ***
I can reproduce this every time with System Monitor 3.8.2.1 under GNOME Shell on Fedora 19, using Adwaita theme: 1) I have System Monitor and another application visible and System Monitor is focused. The grid is visible. 2) Switch focus to another application. System Monitor changes to backdrop theme and grid is visible. 3) Switch focus back to System Monitor. System Monitor changes to focused theme and grid is no longer visible. 4) Resize System Monitor. The grid is visible again. This is not reproducible using High Contrast theme.
Oh, I can reproduce something weird with both Adwaita and High Contrast, when switching between them in (in both directions): 1) I have System Monitor and Tweak Tool visible. Tweak Tool is focused. 2) Switch theme from Adwaita to High Contrast (or from High Contrast to Adwaita, the result is the same). The grid is visible on the CPU graph and it is NOT visible on the Memory graph and Network Graph. 3) After some time, the grid becomes visible on Network Graph, but is still not visible on Memory graph.
Created attachment 248570 [details] Screenshot of glitch Using AMD graphics. Graph backgrounds can be restored by resizing window, but will disappear when the window regains focus. The network graph does indeed restore itself when it adapts to current usage, but again disappears when the window regains focus.
Same problem with gnome-system-monitor-3.8.2.1-1.fc19.x86_64, Intel graphics. Switch to another application and back to system monitor to lose the grid. Resize to get the grid back.
Ok, I have finally managed to get an updated gtk stack, this probably is a gtk 3.8 thing. I can also reproduce it on Arch with GNOME and Adwaita (strangely XFCE + Greybird with compositing on does not reproduce this).
This problem has been fixed in the development version. The fix will be available in the next major software release. Thank you for your bug report.
*** Bug 704145 has been marked as a duplicate of this bug. ***
*** Bug 708883 has been marked as a duplicate of this bug. ***
*** Bug 710725 has been marked as a duplicate of this bug. ***