Fixed graph grids not rendered issue (Bug 693677).

Fixed graph grids not being rendered issue by
redrawing the grids in case of state flags changes, so when the window
gets focused, the grid is redrawn.
http://bugzilla.gnome.org/show_bug.cgi?id=693677